# trabalho-final-trab-js2py

./: .gitignore  README.md  main.py  mainIn.py  mainTr.py  pyproject.toml
ast_nodes/: nodes.py
errors/: exceptions.py
examples/: advanced_sorting.js  binary_search.js  calculator.js  classes_e_objetos.js  comentarios.js  demo_formatacao.js  estrutura_de_controle.js  estrutura_de_dados.js  example.js  fibonacci.js  helloWord.js  manipulacao_de_string.js  recursion.js  sorting.js  test_advanced_classes.js  test_classes.js  test_comments.js  test_comments_detailed.js  test_complete.js  test_encoding.js  test_errors.js  test_method_call.js  test_new.js  test_parser_error.js  test_simple_class.js  test_string_concat.js  test_this.js
interpreter/: interpreter.py
lexer/: tokenizer.py
parser/: parser.py
tests/: test_basic.py  test_comments.py  test_errors.py  test_interpreter.py  test_parser.py  test_tokenizer.py  test_transpiler.py
translator/: transpiler.py
