[project]
name = "trabalho-final-trab-js2py"
version = "0.1.0"
description = "JavaScript to Python transpiler and interpreter"
requires-python = ">=3.8"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ast_nodes",
    "interpreter", 
    "lexer",
    "parser",
    "translator"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=ast_nodes",
    "--cov=interpreter", 
    "--cov=lexer",
    "--cov=parser",
    "--cov=translator",
    "--cov-report=term-missing",
    "--cov-report=html",
]
